<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/border1"
    android:textAlignment="center"
    tools:context=".ui.SecondFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@android:drawable/btn_star_big_on" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="314dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal"
                android:text="@string/textViewName"
                android:textColor="@color/red_jones"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewCode"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:text="@string/textViewFullName"
                android:textColor="@color/red_jones"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAlterEgos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewAlterEgos"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewFirstAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewFirstAppearance"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/gender"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewAlignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewAlignment"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewBase"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewEyeColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewEyeColor"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewGroupAffiliation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewGroupAffiliation"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewHairColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewHairColor"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewOccupation"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewPlaceOfBith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewPlaceOfBith"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewPublisher"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewRace"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewRelatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewRelatives"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewSlug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewSlug"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewXs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewXs"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewSm"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewMd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewMd"
                android:textColor="@color/red_jones" />

            <TextView
                android:id="@+id/textViewLg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:text="@string/textViewLg" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>